--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "irc": "irc://irc.freenode.org/sugarcrm"
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "ext-curl": "*",
+        "ext-json": "*"
     }
 }
